Add changes for Mkisan content

--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -1516,7 +1516,8 @@ webui.itemdisplay.default = dc.title, dc.title.alternative, dc.contributor.*, \
 							 dc.description.sponsorship,dc.identifier.fund,dc.identifier.other,dc.subject.ddc, \
 							 dc.editon,dc.place,dc.Species,dc.Species.animal,dc.targetaudience,dc.isijournal, \
 							 dc.fulltextstatus,dc.cisubject.ciforsubject,iwsubject.iwmisubject,dc.type.output, \
-							 cg.subject.anancy,cg.subject.wle
+							 cg.subject.anancy,cg.subject.wle,cg.Livestock.function,cg.Livestock.agegroup, \
+							 cg.message.Voice,cg.message.SMS,cg.link.video(link),cg.link.audio(link),cg.link.photo(link),cg.link.reference(link),cg.link.citation(link)
 
 # When using "resolver" in webui.itemdisplay to render identifiers as resolvable
 # links, the base URL is taken from <code>webui.resolver.<n>.baseurl</code>
